<resources>
    <string name="app_name">Fun Emoji Packs</string>
    <string name="makePage_image">Showing the image you choose</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="make_text_inputhint">Please input the text you want.</string>

    <string name="profile_img">This is user img profile.</string>

    <string name="login_username">Username/E-mail: </string>
    <string name="sample_login_username">user1</string>
    <string name="login_pwd">Password: </string>
    <string name="login_pwd_confirm">Repeat your Password: </string>
    <string name="login_btn_text">Sign in</string>
    <string name="no_account">Do not have a account? </string>
    <string name="regist_btn_text">Sign up</string>
    <string name="logout_btn_text">Sign out</string>

    <string name="log_empty_tips">Username and password could not be empty.</string>
    <string name="pwd_diff_tips">Input the same password twice.</string>
    <string name="regist_succ_tips">Regist successfully, please sign in.</string>
    <string name="logout_succ_tips">Sign out successfully.</string>
    <string name="login_succ_tips">Sign in successfully.</string>

    <string name="user_name_exist_tips"> Username already exists, please choose another one.</string>
    <string name="user_name_wrong_tips"> Check your username. </string>
    <string name="pwd_wrong_tips"> Check your password. </string>

    <string name="user_not_login"> Please login to your account before sharing.</string>
    <string name="share_complete"> Share Succeed!</string>

</resources>
